[package]
name = "esphome2loki"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.20.4"
rustls-native-certs = "0.6.2"
rumqttc = { version = "0.12.0", features = ["use-rustls"] }

serde = { version = "1", features = ["derive"]}
serde_json = "1.0.81"

structopt = { version = "0.3", default-features = false }
figment = { version = "0.10", features = ["toml", "env"] }

[dev-dependencies]
insta = { version = "1.8", features = ["redactions"]}
indoc = "1.0"